Fix padding causing _map page to have horizontal scroll

--- a/css/.sass/map.sass
+++ b/css/.sass/map.sass
@@ -6,7 +6,6 @@ div
         width: 100%
         height: $map-height
         background-color: $brown
-        padding: $space * 3
         color: $brown
         font-family: $body-font
         h3
