--- a/css/.sass/style.sass
+++ b/css/.sass/style.sass
@@ -22,7 +22,8 @@ header
     width: 100%
     background-color: $orange
     margin-top: 0
-    padding: $space/2
+    padding-top: $space/2
+    padding-bottom: $space/2
     div#header-wrapper
         max-width: $wrapper-width
         width: 100%
